--- a/ResidentSleeper/Pages/_ViewImports.cshtml
+++ b/ResidentSleeper/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using ResidentSleeper
+﻿@using ResidentSleeper
 @namespace ResidentSleeper.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
