SLEEP-47/45 Show recommended flowers in details page

--- a/ResidentSleeper/ClientApp/src/components/FlowerComponents/FlowerDetails.css
+++ b/ResidentSleeper/ClientApp/src/components/FlowerComponents/FlowerDetails.css
@@ -9,6 +9,11 @@
     padding: 5px;
 }
 
+.content-recommendations {
+    padding: 5px;
+    flex-direction: column-reverse;
+}
+
 .image {
     width: 500px;
     height: 500px;
