--- a/ResidentSleeper/ClientApp/src/components/FlowerComponents/FlowerDetails.css
+++ b/ResidentSleeper/ClientApp/src/components/FlowerComponents/FlowerDetails.css
@@ -15,8 +15,10 @@
 }
 
 .image {
-    width: 500px;
-    height: 500px;
+    /*width: 500px;
+    height: 500px;*/
+    width: 100%;
+    height: 100%;
 }
 
 span + span {
